# SEK_2017

M_Arquivos/: .cproject  .project  mat.m
M_Arquivos/src/: MArquivos.cpp  (+4 more)
arquivos matlab de leituras do robo/: leitura_sensor_cor_hsv_D vermelho claro.m  leitura_sensor_cor_hsv_D.m  leitura_sensor_cor_hsv_E vemelho claro.m  leitura_sensor_cor_hsv_E.m
controle-motor/: .cproject  .project  CMakeLists.txt  Main.cpp  Motorcontrolado.cpp  Motorcontrolado.h
testando_list/: .cproject  .project  main.cpp
teste/: .cproject  .gitignore  .~lock.coleta_dados_lego.ods#  CMakeLists.txt  Classe.cpp  Classe.h  Controlador_motor.cpp  Controlador_motor.h  MArquivos.cpp  MArquivos.h  MainContaTempo.cpp  coleta_dados_lego.ods  convert_rgb_to_hsv.m  exec  main.cpp  mainTesteAtan2.cpp  mathLibTeste.cpp
teste/bild/: CMakeCache.txt  Makefile  binario  cmake_install.cmake
teste/src_folder/: .gitignore  Arquivos_mapeamento.cpp  Arquivos_mapeamento.h  Cancela.h  Const.h  Controlador_motor.cpp  Controlador_motor.h  Controlador_robo.cpp  Controlador_robo.h  Garra.cpp  Garra.h  MArquivos.cpp  M_arquivos.cpp  Mapeamento.cpp  Mapeamento.h  Resgate.cpp  Resgate.h  Sensor_cor.cpp  Sensor_cor.h  Sensor_cor_hsv.cpp  Sensor_cor_hsv.h  Sensorcor.cpp  Sensorcor.h  Ultra_Som.cpp  Ultra_Som.h  Ultrassom.cpp  Ultrassom.h  Ultrassom_nxt.cpp  Ultrassom_nxt.h  ev3dev.cpp  ev3dev.h
teste_distancia_entre_rodas/: .cproject  .project  CMakeLists.txt  main.cpp
teste_raio_roda/: .cproject  .project  CMakeLists.txt  main.cpp
teste_raio_roda/src_folder/: Const.h  Controlador_robo.cpp  Controlador_robo.h
teste_sensor_sem_lib/: .cproject  .project  CMakeLists.txt  Main.cpp
teste_sensor_sem_lib/src_folder/: Ultrassom.cpp  Ultrassom.h  Ultrassom_nxt.cpp  Ultrassom_nxt.h
teste_sensores_cor/: .cproject  .project  CMakeLists.txt  main.cpp  runDocker.sh
treinamento_obr/: .cproject  .project  CMakeLists.txt  Main.cpp
(+15 files in other folders)
